--- a/pom.xml
+++ b/pom.xml
@@ -27,22 +27,9 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.bgee.log4jdbc-log4j2</groupId>
             <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
@@ -87,7 +74,7 @@
 			    </execution>
 			  </executions>
 			  <configuration>
-			    <mainClass>${start-class}</mainClass>
+			    <mainClass>{start-class}</mainClass>
 			    <arguments>
 <!-- 			      <argument>foo</argument> -->
 <!-- 			      <argument>bar</argument> -->
